restaurants/deploy/rabbitMQ.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: restaurant
spec:
  ports:
    - port: 5672
      name: amqp
    - port: 15672
      name: management
  selector:
    app: rabbitmq

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          env:  # per test. Cambiare poi con Secret e configmap
            - name: RABBITMQ_DEFAULT_USER
              value: guest
            - name: RABBITMQ_DEFAULT_PASS
              value: guest
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      volumes:
        - name: rabbitmq-data
          emptyDir: {} # per test. Cambiare con PersistentVolumeClaim in produzione
