restaurants/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: restaurant
  annotations: {}
spec:
  ingressClassName: nginx  
  rules:
    - host: gateway.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-restaurant
                port:
                  number: 8080
